ckeditor now has correct styling for dark mode in posts component

--- a/ngLoreHunter/src/app/shared/components/profile/profile.component.css
+++ b/ngLoreHunter/src/app/shared/components/profile/profile.component.css
@@ -123,7 +123,7 @@
   position: relative;
 }
 
-.user-avatar {
+.user-profile-avatar {
   width: 192px;
   height: 192px;
   font-size: 115px;
@@ -138,7 +138,7 @@
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
-.user-avatar:hover {
+.user-profile-avatar:hover {
   box-shadow: 0 6px 10px 0px rgb(0 0 0 / 14%), 0 1px 18px 0px rgb(0 0 0 / 12%), 0 3px 5px 0 rgb(0 0 0 / 20%) !important;
   transform: translateY(-5px);
 }
